Super experimental upgrade